# python-api-django-postgresql

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml  setup.cfg
api/: main.py  router.py  urls.py
api/admin/models/: api_error_model.py
api/admin/serializers/: api_error_serializer.py  group_serializer.py  user_serializer.py
api/admin/views/: api_error_viewset.py  group_viewset.py  user_viewset.py
api/config/: build_swagger_schema.py  pytest.ini  swagger.py
api/mixins/: hateoas_mixin.py  logging_mixin.py
api/models/: address_type_model.py  api_error_model.py  app_user_model.py  country_region_currency_model.py  currency_model.py  currency_rate_model.py  customer_model.py  product_category_model.py  product_description_model.py  product_model.py  product_model_model.py  product_subcategories_model.py  sales_order_header_sales_reason_model.py  sales_people_model.py  sales_people_quota_history_model.py  sales_person_credit_card_model.py  sales_reason_model.py  sales_territories_history_model.py  special_offer_product_model.py  state_province_model.py
api/people/: urls.py
api/people/models/: address_model.py  address_type_model.py  country_region_model.py  email_address_model.py  people_model.py  phone_number_model.py  phone_number_type_model.py  state_province_model.py
api/people/serializers/: address_type_serializer.py  country_region_serializer.py  state_province_serializer.py
api/people/views/: address_type_viewset.py  country_region_viewset.py  state_province_viewset.py
api/production/models/: product_model.py  product_subcategories_model.py  unit_measures_model.py
api/sales/: urls.py
api/sales/models/: country_region_currency_model.py  credit_card_model.py  currency_rate_model.py  customer_model.py  sales_order_detail_model.py  sales_order_header_model.py  sales_order_header_sales_reason_model.py  sales_people_quota_history_model.py  sales_person_credit_card_model.py  sales_tax_rates_model.py  sales_territory_model.py  ship_method_model.py  shopping_cart_item_model.py  special_offer_model.py  special_offer_product_model.py  store_model.py
api/sales/serializers/: sales_territory_serializer.py
api/sales/views/: sales_territory_viewset.py
api/schemas/: address_type_serializer.py  api_error_serializer.py  app_user_serializer.py  group_serializer.py  user_serializer.py
api/utils/: exception_handler.py  hateoas_mixin.py  hateoas_serializer.py  logger.py  logging_handler.py  path_handler.py  values_handler.py
api/views/: address_type_viewset.py  app_user_login_view.py  app_user_register_view.py  group_viewset.py  user_viewset.py
api/viewsets/: base_hateoas_viewset.py
core/: asgi.py  base.py  local.py  settings.py  settings_dev.py  settings_test.py  test.py  urls.py  wsgi.py
tests/: conftest.py
tests/e2e/: address_types_test.py  country_regions_test.py  state_provinces_test.py
tests/e2e/people/: address_types_test.py  country_regions_test.py  state_provinces_test.py
tests/e2e/sales/: sales_territories_test.py
tests/factories/people/: address_type_factory.py  country_region_factory.py  state_province_factory.py
tests/factories/sales/: sales_territory_factory.py
